make bg repeat properly

--- a/catch.html
+++ b/catch.html
@@ -12,6 +12,7 @@
     <title>Catch card remotely</title>
   </head>
   <body>
+    <span id="bg"></span>
     <iframe src="about:blank" name="_iframe"></iframe>
     <span id="status" class="hidestatus"></span>
     <div class="header catch-header">
