--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Card Binder</title>
   </head>
   <body>
+    <span id="bg"></span>
     <span id="status" class="hidestatus"></span>
 
     <div class="header">
