refactor onload, fix filenames stored incorrectly

--- a/catch.html
+++ b/catch.html
@@ -18,7 +18,7 @@
     <div class="header catch-header">
       <span class="header-content">
         <a href="index.html"><button class="link">Binder</button></a>
-        <button onclick="fetchAndStoreBinders();">Refetch</button>
+        <button onclick="initializeCatchPage();">Refetch</button>
         <button onclick="localStorage.clear();">Clear storage</button>
       </span>
       <span class="header-content">
