refactor and improve catch functions + fix wrong border colors

--- a/catch.html
+++ b/catch.html
@@ -40,9 +40,7 @@
     </div>
 
     <div id="parent">
-      <div id="content" class="content lotto">
-        <span id="winner"></span>
-      </div>
+      <span id="winner" class="header-content"></span>
       <span class="header-content" id="card-list-div">
         <ol reversed id="card-list"></ol>
       </span>
