add progress bar. BONUS: real-time binder update

--- a/catch.html
+++ b/catch.html
@@ -37,6 +37,7 @@
         <select id="selectBinder"></select>
         <button onclick="selectNewBinder('storefilenames');">Apply</button>
       </span>
+      <span class="header-content" id="progress"><progress ></progress></span>
     </div>
 
     <div id="parent">
