add progress bar to binder view

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <select id="selectBinder"></select>
         <button onclick="selectNewBinder('fillbinder');">Apply</button>
       </span>
+      <span class="header-content" id="progress"><progress ></progress></span>
 
       <span class="header-content">
         <span class="header-content">
