--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <div class="header">
       <span>
-        <a href="catch.html">
+        <a href="pull.html">
           <button class="link">
             <img src="img/0_icons/voltorb.png" class="icon" />
-            Catch
+            Pull
           </button>
         </a>
 
