--- a/pull.html
+++ b/pull.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
-    <script type="text/javascript" src="js/catch.js"></script>
+    <script type="text/javascript" src="js/pull.js"></script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script type="text/javascript" src="js/display.js"></script>
     <script type="text/javascript" src="js/binder.js"></script>
     <script type="text/javascript" src="js/sorting.js"></script>
 
-    <title>Catch card remotely</title>
+    <title>Pull card remotely</title>
   </head>
   <body>
     <span id="bg"></span>
     <iframe src="about:blank" name="_iframe"></iframe>
     <span id="status" class="hidestatus"></span>
-    <div class="header catch-header">
+    <div class="header pull-header">
       <span id="top">
         <button onclick="location.href='index.html';" class="link">
           <img src="img/0_icons/ditto.png" class="icon" />Home
         </button>
 
-        <button onclick="initializeCatchPage();">
+        <button onclick="initializePullPage();">
           <img src="img/0_icons/farfetchd.png" class="icon" /> Sync
         </button>
 
