--- a/tests.html
+++ b/tests.html
@@ -16,7 +16,7 @@
 
     <div class="header">
       <span class="header-content">
-        <a href="catch.html">Catch</a>
+        <a href="pull.html">Pull</a>
         <button onclick="fetchAndFillBinder();">Sync</button>
       </span>
 
