--- a/pull.html
+++ b/pull.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="img/0_icons/hisui_pokeball.png"
+    />
     <script type="text/javascript" src="js/pull.js"></script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script type="text/javascript" src="js/display.js"></script>
