--- a/pull.html
+++ b/pull.html
@@ -28,13 +28,8 @@
           <img src="img/0_icons/ditto.png" class="icon" />Home
         </button>
 
-        <button onclick="PULL_initializePullPage();">
+        <button onclick="PULL_initialize();">
           <img src="img/0_icons/farfetchd.png" class="icon" /> Sync
-        </button>
-
-        <button onclick="localStorage.clear();">
-          <img src="img/0_icons/slowpoke.png" class="icon" />
-          Clear storage
         </button>
       </span>
 
