--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
       href="img/0_icons/hisui_pokeball.png"
     />
-
+    <script type="module" src="js/app.js"></script>
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/sorting.js"></script>
     <script type="module" src="js/ui.js"></script>
