--- a/pull.html
+++ b/pull.html
@@ -9,6 +9,7 @@
       type="image/x-icon"
       href="img/0_icons/hisui_pokeball.png"
     />
+    <script type="module" src="js/app.js"></script>
     <script type="module" src="js/pull.js"></script>
     <script type="module" src="js/constants.js"></script>
     <script type="module" src="js/ui.js"></script>
