add basic sorting

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
           <select id="sizeDropdown"></select>
         </button>
       </span>
+      <span id="sort">
+        <button>
+          Sort by:
+          <select id="sortDropdown">
+            <option value="Pokemon Type">Pokemon Type</option>
+            <option value="Dex #">Dex #</option>
+            <option value="Set Number">Set Number</option>
+            <option value="Card Type">Card Type</option>
+          </select>
+        </button>
+      </span>
     </div>
     <div id="contentDiv" class="contentDiv"></div>
   </body>
