add sort by visuals

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <option value="Dex #">Dex #</option>
             <option value="Set Number">Set Number</option>
             <option value="Card Type">Card Type</option>
+            <option value="Visuals">Visuals</option>
           </select>
         </button>
       </span>
