add button toggle for better mobile viewing

--- a/index.html
+++ b/index.html
@@ -36,21 +36,25 @@
           <img src="img/0_icons/farfetchd.png" class="icon" />
           Sync
         </button>
+        <button id="toggleHeaderBtn">
+          <img src="img/0_icons/kecleon.png" class="icon" />
+          Show/Hide buttons
+        </button>
       </span>
-      <span>
+      <span id="binderSpan">
         <button>
           Binder:
           <select id="binderDropdown"></select>
         </button>
       </span>
-      <span>
+      <span id="setSpan">
         <button>
           Set:
           <select id="setDropdown"></select>
         </button>
       </span>
       <span id="progressSpan"><progress></progress></span>
-      <span>
+      <span id="gridDropdowns">
         <button>
           Cols:
           <select id="colDropdown"></select>
