--- a/pull.html
+++ b/pull.html
@@ -32,6 +32,11 @@
         <button id="syncButton">
           <img src="img/0_icons/farfetchd.png" class="icon" /> Sync
         </button>
+
+        <button id="toggleHeaderBtn">
+          <img src="img/0_icons/kecleon.png" class="icon" />
+          Show/Hide buttons
+        </button>
       </span>
 
       <span id="binderSpan">
