hide more buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="header">
       <span>
         <a href="pull.html">
-          <button class="link">
+          <button id="pullButton" class="link">
             <img src="img/0_icons/voltorb.png" class="icon" />
             Pull
           </button>
