--- a/pull.html
+++ b/pull.html
@@ -25,7 +25,11 @@
     <span id="statusSpan" class="hidestatus"></span>
     <div class="header pull-header">
       <span>
-        <button onclick="location.href='index.html';" class="link">
+        <button
+          id="homeButton"
+          onclick="location.href='index.html';"
+          class="link"
+        >
           <img src="img/0_icons/ditto.png" class="icon" />Home
         </button>
 
