add sort by recent + rename sorting to sort

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script type="module" src="js/app.js"></script>
     <script type="module" src="js/index.js"></script>
-    <script type="module" src="js/sorting.js"></script>
+    <script type="module" src="js/sort.js"></script>
     <script type="module" src="js/ui.js"></script>
     <script type="module" src="js/page.js"></script>
     <script type="module" src="js/store.js"></script>
@@ -78,6 +78,7 @@
             <option value="Set Number">Set Number</option>
             <option value="Card Type">Card Type</option>
             <option value="Visuals">Visuals</option>
+            <option value="recent">Recent</option>
           </select>
         </button>
       </span>
