--- a/pull.html
+++ b/pull.html
@@ -15,7 +15,7 @@
     <script type="module" src="js/ui.js"></script>
     <script type="module" src="js/page.js"></script>
     <script type="module" src="js/store.js"></script>
-    <script type="module" src="js/sorting.js"></script>
+    <script type="module" src="js/sort.js"></script>
 
     <title>Pull card remotely</title>
   </head>
