--- a/pull.html
+++ b/pull.html
@@ -30,16 +30,16 @@
           onclick="location.href='index.html';"
           class="link"
         >
-          <img src="img/0_icons/ditto.png" class="icon" />Home
+          <img src="img/0_icons/pokeball_coin.png" class="icon" /> Binder
         </button>
 
         <button id="syncButton">
-          <img src="img/0_icons/farfetchd.png" class="icon" /> Sync
+          <img src="img/0_icons/yamper_coin.png" class="icon" />
+          Fetch
         </button>
 
         <button id="toggleHeaderBtn">
           <img src="img/0_icons/kecleon.png" class="icon" />
-          Show/Hide buttons
         </button>
       </span>
 
@@ -53,9 +53,9 @@
       <span id="progressSpan"><progress>text</progress></span>
 
       <span id="pullSpan">
-        <button id="pullOneButton">Pull!</button>
-        <button id="pullFiveButton">Pull 5!</button>
-        <button id="pullTenButton">Pull 10!</button>
+        <button id="pullOneButton">1️⃣</button>
+        <button id="pullFiveButton">5️⃣</button>
+        <button id="pullTenButton">🔟</button>
         <button id="clearDisplayButton">Clear display</button>
       </span>
     </div>
