--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
       <span>
         <a href="pull.html">
           <button id="pullButton" class="link">
-            <img src="img/0_icons/voltorb.png" class="icon" />
+            <img src="img/0_icons/meowth_coin.png" class="icon" />
             Pull
           </button>
         </a>
 
         <button id="syncButton">
-          <img src="img/0_icons/farfetchd.png" class="icon" />
-          Sync
+          <img src="img/0_icons/yamper_coin.png" class="icon" />
+          Fetch
         </button>
         <button id="toggleHeaderBtn">
           <img src="img/0_icons/kecleon.png" class="icon" />
-          Show/Hide buttons
         </button>
       </span>
       <span id="binderSpan">
